# Downtime_Prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt  validate_training_setup.py
.github/workflows/: ci.yml
artifacts/anomaly/: mahalanobis.pkl
artifacts/drift/: drift_detector.pkl  reference_stats.pkl
artifacts/models/: scaler.pkl
config/: config.yaml
dashboard/: __init__.py  streamlit_dashboard.py
data_preprocessing/: __init__.py  initial_cleaning.py  preprocessor.py
encoders/: feature_names.pkl  label_encoder.pkl  onehot_columns.pkl
inference/: __init__.py  main.py
mlruns/0/: meta.yaml
mlruns/365438821957551932/: meta.yaml
mlruns/365438821957551932/e6de832ce3f24a6f90f43a9307e0b736/: meta.yaml
mlruns/365438821957551932/e6de832ce3f24a6f90f43a9307e0b736/metrics/: cv_recall_mean  cv_recall_score  cv_recall_std  f1_0  f1_1  f1_2  f1_3  f1_macro avg  f1_weighted avg  final_cv_recall  final_test_recall  precision_0  precision_1  precision_2  precision_3  precision_macro avg  precision_weighted avg  recall_0  recall_1  recall_2  recall_3  recall_macro avg  test_recall_score  (+3 more)
monitoring/: __init__.py  anomaly_detector.py  drift_detector.py  prometheus.yml  prometheus_metrics.py
monitoring/grafana-provisioning/datasources/: datasource.yml
streaming/: __init__.py  consume_kafka_and_infer.py  publish_to_mqtt.py
training_pipeline/: __init__.py  train_model.py  train_pipeline.py
utils/: __init__.py  load_encoder.py  s3_download.py  s3_logger.py  s3_upload.py  save_encoder.py
(+66 files in other folders)
